第二个版本